style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

/* site wide styles */
body {
    height: 100vh;
    margin: 0;
    font-family: Roboto, san-serif;
    box-sizing: border-box;
}

ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

ul a {
    text-decoration: 0;
    color: #E5E7EB;
}

button {
    background-color: #3882F6;
    color: #E5E7EB;
    font-family: Roboto, sans-serif;
    font-weight: bold;
    border: none;
    border-radius: 8px;
    padding: 8px 32px;
}

/* header section styles */
.container {
    background-color: #1F2937;
    color: #E5E7EB;
    font-size: 18px;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    padding: 16px;
}

.header {
    flex-basis: 100%;
    margin: 0 15vw;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    gap: 4px;
    margin-bottom: 100px;
}

.header-logo {
    color: #F9FAF8;
    font-size: 24px;
    font-weight: 600;
    text-align: center;
}

.header-links {
    display: flex;
    gap: 24px;
    text-align: center;
}

.hero {
    flex-basis: 100%;
    margin: 0 15vw;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 32px;
    margin-bottom: 100px;
}

.hero-left {
    min-width: 300px;
    flex: 1 1 0;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    gap: 16px;
}

.hero-right {
    min-width: 300px;
    flex: 1 1 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 4px;
}

.hero-img {
    width: 100%;
    height: auto;
    aspect-ratio: 4/3;
    text-align: center;
}

.hero-img-credit a{
    color: rgb(223, 177, 93);
}

.hero-main-txt {
    color: #F9FAF8;
    font-size: 48px;
    font-weight: 800;
}

/* information section content */
.info {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: stretch;
}

.info-header {
    color: #1F2937;
    font-size: 36px;
    font-weight: 800;
    text-align: center;
    padding: 32px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.info-cards {
    flex-basis: 80%;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 32px;
}

.card {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.card-img {
    height: 150px;
    width: 150px;
    border: 4px solid #3882F6;
    border-radius: 10px;
}

.card-txt {
    width: 150px;
    color: gray;
    font-size: 16px;
    text-align: center;
}

